test/error/MethodPrivateVirtual.fu
public class Test
{
	virtual bool Run() //ERROR: Private method cannot be virtual
	{
		return true;
	}
}
